# mlflow

./: README.md  mydb.sqlite  precos_previstos.csv  pyproject.toml
mlartifacts/1/92e6ac1296394a0fbdaf7fa1fc60e0d7/artifacts/: feature_importance_weight.json
mlartifacts/1/92e6ac1296394a0fbdaf7fa1fc60e0d7/artifacts/model/: MLmodel  model.xgb
mlartifacts/1/e47058ab7ab64982a90da4d870c4dcfe/artifacts/: feature_importance_weight.json
mlartifacts/1/e47058ab7ab64982a90da4d870c4dcfe/artifacts/model/: MLmodel  conda.yaml  model.xgb
mlartifacts/634229486262451590/b5507f80842d4bc6975b1071ba36e1bc/artifacts/: feature_importance_weight.json
mlartifacts/634229486262451590/b5507f80842d4bc6975b1071ba36e1bc/artifacts/model/: MLmodel  conda.yaml  model.xgb  python_env.yaml  requirements.txt
mlruns/0/: meta.yaml
mlruns/634229486262451590/: meta.yaml
mlruns/634229486262451590/b5507f80842d4bc6975b1071ba36e1bc/: meta.yaml
mlruns/634229486262451590/b5507f80842d4bc6975b1071ba36e1bc/inputs/6cd4071dedb6b1bb2cfc9ce9a37fb057/: meta.yaml
mlruns/634229486262451590/b5507f80842d4bc6975b1071ba36e1bc/metrics/: r2  rmse  train-rmse
mlruns/634229486262451590/b5507f80842d4bc6975b1071ba36e1bc/tags/: Training Info  mlflow.log-model.history  mlflow.runName  mlflow.source.git.commit
mlruns/634229486262451590/datasets/5a02bb0a91444b7a6c6f989701a62475/: meta.yaml
mlruns/634229486262451590/datasets/83a497108499cee3c35ddaa378df0c22/: meta.yaml
notebooks/: regression-imoveis.ipynb  requests.ipynb
notebooks/mlruns/0/: meta.yaml
src/models/: predict_model.py  train_model.py
(+1 files in other folders)
